# deadfeed

./: CMakeLists.txt  README.md
preset/: uwu.cfg
src/: args.cpp  args.hpp  config.cpp  config.hpp  fmt.cpp  fmt.hpp  log.cpp  log.hpp  main.cpp  trans.cpp  trans.hpp
