cmake_minimum_required(VERSION 3.19)
project(deadfeed)
find_package(OpenCV REQUIRED PATHS C:/OpenCV/build/x64/vc15/lib/)
include_directories(${OpenCV_INCLUDE_DIRS})
file(GLOB src CONFIGURE_DEPENDS "src/*.hpp" "src/*.cpp")
add_executable(deadfeed ${src})
set_property(TARGET deadfeed PROPERTY CXX_STANDARD 17)
target_link_libraries(deadfeed ${OpenCV_LIBS})
