cmake_minimum_required(VERSION 3.19)
project(deadfeed)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(OpenCV 4 REQUIRED)
file(GLOB SRC CONFIGURE_DEPENDS "src/*.hpp" "src/*.cpp")
add_executable(deadfeed ${SRC})
target_include_directories(deadfeed PUBLIC ${OpenCV_INCLUDE_DIRS})
target_link_libraries(deadfeed ${OpenCV_LIBS})
